Fix [Low-contrast text]

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   --modal-background: rgba(38, 44, 64, 0.5);
   --modal-shadow: rgba(38, 44, 64, 0.3);
   --link: rgba(65, 78, 110, 1);
-  --button-color: rgba(99, 116, 174, 1);
+  --button-color: rgba(65, 78, 110, 1);
   --main-body: rgba(242, 247, 251, 1);
   --button-text-color: rgba(242, 247, 251, 1);
 }
